# ospray_starter

./: CMakeLists.txt  README.md  main.cpp
module/: CMakeLists.txt  example_geometry.cpp  example_geometry.h  example_geometry.ispc  example_module_init.cpp  moduleInit.cpp
module/geometry/: ExampleSpheres.cpp  ExampleSpheres.h  ExampleSpheres.ispc  ExampleSpheresShared.h
util/: CMakeLists.txt  arcball_camera.h  embedded_colormaps.h  shader.cpp  shader.h  transfer_function_widget.cpp  transfer_function_widget.h  util.cpp  util.h
